[US0001] - Implemented UI of MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="form_msn">MSN</string>
+    <string name="form_login">Login</string>
 </resources>
