--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="api_url">https://raw.githubusercontent.com/amaysim-au/engineering-test-resources/master/collection.json</string>
     <string name="loading">Loading ...</string>
     <string name="failed_login">Invalid MSN/Password.</string>
+    <string name="account_summary">Account Summary</string>
 </resources>
