[US0002] - Created ConnectivityUtil - Implemented checking of data connection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="acct_next_billing_date">Next Billing Date: %1$s</string>
     <string name="acct_contact_no">Contact no: %1$s</string>
     <string name="acct_email_address">Email address: %1$s</string>
+    <string name="error_no_connection">No Connection. Please check your data connection.</string>
 </resources>
